[project]
name = "backup-automation-report-lab"
version = "0.1.0"
description = "Backup routine lab that validates a synthetic manifest, hashes safe sample records, and exports a daily report."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
